# exercism-solutions

./: .gitignore  Cargo.toml  exercism.code-workspace
elixir/: .gitignore  mix.exs  run.exs
elixir/bob/: bob.exs
elixir/tournament/: tournament.exs
hackerrank/ctci-is-binary-search-tree-English/: ctci-is-binary-search-tree-English.py
javascript/: package-lock.json  package.json  tsconfig.json  tslint.json
javascript/hello-world/: hello-world.js
javascript/leap/: leap.js  leap.spec.js
javascript/pangram/: pangram.js  pangram.ts
javascript/rna-transcription/: rna-transcription.js  rna-transcription.spec.js  rna-transcription.ts
javascript/simple-cipher/: simple-cipher.js  simple-cipher.ts
javascript/two-fer/: two-fer.js
python/: .gitignore  Untitled.ipynb  exercism-python.ipynb  play.py
python/.ipynb_checkpoints/: exercism-python-checkpoint.ipynb
python/allergies/: allergies.py
python/anagram/: anagram.py
python/atbash-cipher/: atbash_cipher.py
python/bob/: bob.py
python/difference-of-squares/: difference_of_squares.py
python/gigasecond/: gigasecond.py
python/hamming/: hamming.py
python/isbn-verifier/: isbn_verifier.py
python/isogram/: isogram.py
python/leap/: leap.py
python/meetup/: meetup.py
python/pangram/: pangram.py
python/rest-api/: rest_api.py  rest_api_test.py
python/rna-transcription/: rna_transcription.py
python/robot-simulator/: robot_simulator.py
python/rotational-cipher/: rotational_cipher.py
python/run-length-encoding/: run_length_encoding.py
python/series/: series.py
python/sieve/: sieve.py
(+77 files in other folders)
