[workspace]
members = [
  "rust/hello-world",
  "rust/gigasecond",
  "rust/leap",
  "rust/raindrops",
  "rust/reverse-string",
  "rust/nth-prime",
  "rust/bob",
  "rust/beer-song",
  "rust/proverb",
  "rust/difference-of-squares",
  "rust/sum-of-multiples",
  "rust/grains",
  "rust/pythagorean-triplet",
  "rust/prime-factors",
  "rust/series",
  "rust/armstrong-numbers",
  "rust/collatz-conjecture",
  "rust/diffie-hellman",
]
